changed pictures, refactored links to fb and newsletters

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "firebase": "^9.17.2",
     "firebase-tools": "^11.24.0",
     "startbootstrap-modern-business": "^5.0.6"
   }
